[gd_scene load_steps=10 format=3 uid="uid://cpss7gy4yj7c"]

[ext_resource type="Script" uid="uid://c0aq6qylfmnkv" path="res://shared/ui/progress_indicator/progress_indicator.gd" id="1"]
[ext_resource type="Theme" uid="uid://dhhfdgr1gdgrb" path="res://shared/assets/themes/character_speech_text.theme" id="2"]
[ext_resource type="Texture2D" uid="uid://bjmwdcpu2qidq" path="res://shared/ui/progressbar new frame/bar frame.png" id="3"]
[ext_resource type="Texture2D" uid="uid://ch4crdbqtgy8o" path="res://shared/ui/progressbar new frame/progresbar complete.png" id="4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0bymw"]
bg_color = Color(0.133333, 0.12549, 0.203922, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oskt2"]
bg_color = Color(0.752941, 0.737255, 0.101961, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.752941, 0.737255, 0.101961, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mn16h"]
draw_center = false
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b81o2"]
bg_color = Color(0.356863, 0.54902, 0.113725, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.356863, 0.54902, 0.113725, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qfkxm"]
bg_color = Color(0.133333, 0.12549, 0.203922, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="ProgressIndicator" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1720.0
offset_bottom = -1005.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="PhraseTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="SpotTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_right = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="PhraseBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 35)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_0bymw")
theme_override_styles/fill = SubResource("StyleBoxFlat_oskt2")
step = 1.0
value = 50.0
show_percentage = false
metadata/_edit_group_ = true

[node name="PhraseFrontBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/PhraseBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 35)
layout_mode = 2
offset_right = 200.0
offset_bottom = 35.0
theme_override_styles/background = SubResource("StyleBoxFlat_mn16h")
theme_override_styles/fill = SubResource("StyleBoxFlat_b81o2")
step = 1.0
value = 5.0
show_percentage = false

[node name="PhraseLabel" type="Label" parent="MarginContainer/VBoxContainer/PhraseBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(185, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -14.5
offset_right = 346.0
offset_bottom = 14.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2")
theme_override_font_sizes/font_size = 22
text = "PHRASE_PROGRESS_BAR_LABEL 100 / 100"
vertical_alignment = 1

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/VBoxContainer/PhraseBar"]
layout_mode = 0
offset_left = -3.0
offset_top = -2.0
offset_right = 203.0
offset_bottom = 36.0
texture = ExtResource("3")
draw_center = false
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12

[node name="PhrasesDone" type="Sprite2D" parent="MarginContainer/VBoxContainer/PhraseBar"]
unique_name_in_owner = true
visible = false
position = Vector2(194, 18)
texture = ExtResource("4")

[node name="SpotBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 35)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_qfkxm")
theme_override_styles/fill = SubResource("StyleBoxFlat_oskt2")
max_value = 103.0
step = 1.0
value = 50.0
show_percentage = false
metadata/_edit_group_ = true

[node name="SpotFrontBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/SpotBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 35)
layout_mode = 2
offset_right = 200.0
offset_bottom = 35.0
theme_override_styles/background = SubResource("StyleBoxFlat_mn16h")
theme_override_styles/fill = SubResource("StyleBoxFlat_b81o2")
step = 1.0
value = 5.0
show_percentage = false

[node name="SpotLabel" type="Label" parent="MarginContainer/VBoxContainer/SpotBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(185, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -16.5
offset_right = 316.0
offset_bottom = 16.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2")
theme_override_font_sizes/font_size = 22
text = "SPOT_PROGRESS_BAR_LABEL 100 / 100"
vertical_alignment = 1

[node name="NinePatchRect2" type="NinePatchRect" parent="MarginContainer/VBoxContainer/SpotBar"]
layout_mode = 0
offset_left = -3.0
offset_top = -2.0
offset_right = 203.0
offset_bottom = 36.0
texture = ExtResource("3")
draw_center = false
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12

[node name="SpotsDone" type="Sprite2D" parent="MarginContainer/VBoxContainer/SpotBar"]
unique_name_in_owner = true
visible = false
position = Vector2(194, 18)
texture = ExtResource("4")
